ios overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@ html {
   height: 100%;
 }
 
+body {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
 /* Common page container styles */
 .page-container {
   @apply flex flex-1 overflow-y-auto overflow-x-hidden scrollbar-hide;
